--- a/ภาษาซีทีละก้าว.md
+++ b/ภาษาซีทีละก้าว.md
@@ -74,3 +74,58 @@ ENTER FINAL SCORE: 25
 Project score error !!!
 Midterm score error !!!
 ```
+
+- จงเขียนโปรแกรมเพื่อแสดงผลตัวเลขตั้งแต่ 1 - 100 โดยให้แสดงเฉพาะเลขคู่
+
+- จงเขียนโปรแกรมเพื่อรับค่าตัวเลขเริ่มต้นและตัวเลขสิ้นสุด แล้วทำการแสดงผลตัวเลขทั้งหมดตั้งแต่ค่าของตัวเลขเริ่มต้นจนถึงค่าของตัวเลขสิ้นสุดที่รับมา โดยแสดงผลตัวเลขบรรทัดละ 5 จำนวน
+
+```
+ENTER START NUMBER: ___
+ENTER END NUMBER: ___
+```
+
+- จงเขียนโปรแกรมสุ่มค่าตัวเลขห 5 ตัวซึ่งมีค่าตั้งแต่ 1 - 100 แล้วทำการคำนวณหาผลรวม ค่าเฉลี่ย และค่าสูงสุดของตัวเลขที่สุ่มมาได้ทั้งหมด โดยแสดงผลทางจอภาพตามรูปแบบต่อไปนี้
+
+```
+RANDOM NUMBER 1: ___
+RANDOM NUMBER 2: ___
+RANDOM NUMBER 3: ___
+RANDOM NUMBER 4: ___
+RANDOM NUMBER 5: ___
+SUM OF NUMBERS IS ___
+AVERAGE OF NUMBERS IS ___
+MAXIMUM NUMBER IS ___
+```
+
+- จงเขียนโปรแกรมสุ่มค่าตัวเลข 20 ตัวซึ่งมีค่าตั้งแต่ 1 - 100 แล้วทำการตรวจสอบว่ามีจำนวนเลขคู่และเลขคี่ทั้งหมดเท่าใดโดยแสดงผลลัพธ์ทางจอภาพตามรูปแบบต่อไปนี้
+```
+RANDOM NUMBERS:
+20 58 10 97 32
+..
+..
+..
+TOTAL ODD NUMBERS: ___
+TOTAL EVEN NUMBERS: ___
+```
+
+- จงเขียนโปรแกรมสุ่มค่าตัวเลขจำนวน 20 ตัวซึ่งมีค่าตั้งแต่ 1 - 1000 แล้วทำการคำนวณหาผลรวม ค่าเฉลี่ย ค่าสูงสุด ค่าต่ำสุด จำนวนของเลขคู่และเลขคี่ โดยแสดงผลลัพธ์ออกมาทางจอภาพดังนี้
+
+```
+RANDOM NUMBERS: ...
+SUM OF NUMBERS: ___
+MAXIMUM NUMBER: ___
+MINIMUM NUMBER: ___
+TOTAL ODD NUMBER: ___
+TOTAL EVEN NUMBER: ___
+```
+
+- กำหนดให้อัตราค่าล่วงเวลามีค่าเท่ากับ 25 บาทต่อชั่วโมงและอัตราภาษีเงินได้มีค่าเท่ากับ 10% ต่อปีของรายได้รวมทั้งหมดก่อนหักภาษี จงเขียนโปรแกรมคำนวณรายได้สุทธิต่อเดือนโดยรับค่าเงินเดือนและจำนวนชั่วโมงล่วงเวลาจากผู้ใช้งานและแสดงผลลัพธ์ต่ังนี้
+
+```
+ENTER YOUR SALARY: ___
+ENTER OVERTIME PAY/MONTH: ___
+TOTAL OVERTIME/MONTH: ___
+TOTAL INCOME/MONTH: ___
+TAX 10%: ___
+NET INCOME/MONTH: ___
+```
